[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sr-retinex"
version = "0.1.0"
description = "Retinex-based image enhancement pipeline."
requires-python = ">=3.10"

[tool.setuptools]
py-modules = [
  "retinex2_corrected",
  "model_utils",
  "plot_metrics",
  "map_ViT_models",
  "unet_models3",
]

[tool.setuptools.package-dir]
"" = "src"
